objects/OUV_Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Road_Tax_Renewal_Required__c</fullName>
        <label>Road Tax Renewal Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Recorded_Off_Road__c</fullName>
        <label>Vehicle Recorded Off Road</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Additional_Information__c</fullName>
        <inlineHelpText>No GDPR data</inlineHelpText>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Available_for_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If vehicle needs to be retained but is no longer required on your fleet, flag for other other fleet owners to transfer.</inlineHelpText>
        <label>Available for Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_Finance_Classification__c</fullName>
        <label>Finance Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Intangible Assets</fullName>
                </value>
                <value>
                    <fullName>Provisioned Vehicles</fullName>
                </value>
                <value>
                    <fullName>Expensed Vehicle</fullName>
                </value>
                <value>
                    <fullName>Leased Vehicles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_MarketManagingDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Managing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Vehicles4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_ProposedAddToFleetDate__c</fullName>
        <inlineHelpText>Proposed add to fleet date is the add to fleet date at the point of ATO approval.</inlineHelpText>
        <label>Proposed Add To Fleet Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_VehicleisDelayedByDays__c</fullName>
        <formula>OUV_DeliveryDate__c -  OUV_InitialDeliveryDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle is Delayed By (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Initial_Retail_Price__c</fullName>
        <formula>(Local_Costs_Accessory__c  + OUV_InitialRetailPrice__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Initial Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OUV_AddToFleetFinancialYear__c</fullName>
        <description>for calculation of total handed in count year wise</description>
        <label>Proposed Add To Fleet Financial Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_NumberofCarKeyDelivered__c</fullName>
        <label>Handover - No of Keys</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                    <default>true</default>
                    <label>2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Order_Request_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OUV Order Request Line Item</label>
        <referenceTo>OUV_OrderRequestLineItem__c</referenceTo>
        <relationshipLabel>OUV Vehicles</relationshipLabel>
        <relationshipName>OUV_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_RemarketingFleetManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Remarketing Fleet Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Vehicles5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_TransmissionDescription__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Transmission_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transmission Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_CarKeysReceivedByManager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Handover - Keys received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_HandInChangeWithinBudget__c</fullName>
        <formula>IF(ISPICKVAL(OUV_HandedInDateChangeOverBudget__c, &apos;Yes&apos;),
   &apos;No&apos;,
   IF(ISPICKVAL(OUV_HandedInDateChangeOverBudget__c, &apos;No&apos;),
      &apos;Yes&apos;,
      &apos;NA&apos;
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hand In Change Within Budget</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_KeysRecievedByNewManager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer - Keys Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_NewRequestedHandedInDate__c</fullName>
        <label>New Requested Hand In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Primary_Location_Address__c</fullName>
        <formula>IF(LEN(OUV_PrimaryLocation__r.BillingStreet)&gt;0, OUV_PrimaryLocation__r.BillingStreet&amp; &quot; &quot; , &quot; &quot; ) &amp;
IF(LEN(OUV_PrimaryLocation__r.BillingCity)&gt;0, OUV_PrimaryLocation__r.BillingCity&amp; &quot; &quot; , &quot; &quot; )&amp;
IF(LEN(OUV_PrimaryLocation__r.BillingPostalCode)&gt;0, OUV_PrimaryLocation__r.BillingPostalCode&amp; &quot; &quot; , &quot; &quot; )&amp;
IF(LEN(OUV_PrimaryLocation__r.BillingState)&gt;0, OUV_PrimaryLocation__r.BillingState&amp; &quot; &quot; , &quot; &quot;) &amp;
IF(LEN(OUV_PrimaryLocation__r.BillingCountry) &gt;0, OUV_PrimaryLocation__r.BillingCountry,&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_CarKeysDeliveredToManager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Handover - Keys delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_ReplacementVehicleMileage__c</fullName>
        <label>Replacement Vehicle Mileage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Temporary_Import_Vehicles__c</fullName>
        <description>Additional information relating to vehicles on temporary import</description>
        <inlineHelpText>Additional information relating to vehicles on temporary import</inlineHelpText>
        <label>Temporary Import Vehicles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_InitialRetailPriceCurrency__c</fullName>
        <label>Initial Retail Price Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_InsuranceDocumentsUploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Documents Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_Derivative_Pack_Description__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Derivative_Pack_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Derivative Pack Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_KeysTransfferedToNewManager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer - Keys transferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_Latest_Planned_Hand_in_Date__c</fullName>
        <formula>IF( 
AND( ISPICKVAL(OUV_VehicleMasterStatus__c, &apos;Pre-Live&apos;) 
,OUV_IsReplacementVehicle__c = false) , 
OUV_ProposedHandInDate__c, 

IF( 
AND( ISPICKVAL(OUV_VehicleMasterStatus__c, &apos;Live&apos;) , NOT( ISPICKVAL(OUV_NewRequestedHandedInDateStatus__c , &apos;Approved&apos;) ) , 
ISBLANK(OUV_ApprovedNewRequestedHandInDate__c) ) , 

OUV_ProposedHandInDate__c - OUV_ProposedAddToFleetDate__c + OUV_AddToFleetDate__c ,

IF(
 AND( ISPICKVAL(OUV_NewRequestedHandedInDateStatus__c, &apos;Approved&apos;) , NOT( ISBLANK(OUV_ApprovedNewRequestedHandInDate__c) ) ,

OUV_IsReplacementVehicle__c = false ) , 
OUV_ApprovedNewRequestedHandInDate__c , 

IF( AND( ISPICKVAL(OUV_NewRequestedHandedInDateStatus__c, &apos;Approved&apos;) , NOT( ISBLANK(OUV_ApprovedNewRequestedHandInDate__c) )) , 
OUV_ApprovedNewRequestedHandInDate__c, 

IF(
OUV_IsReplacementVehicle__c = true, OUV_ProposedHandInDate__c, OUV_ProposedHandInDate__c) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Planned Hand in Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_ReplacementVehicleVINNumber__c</fullName>
        <label>Replacement Vehicle VIN Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_TargetUtilisationPercentage__c</fullName>
        <label>Target Utilisation Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OUV_VehicleLocalIntegrationcost__c</fullName>
        <inlineHelpText>Locally incurred costs including locally fitted accessories.</inlineHelpText>
        <label>Vehicle Local Integration cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_HandedInDateChangeOverBudget__c</fullName>
        <label>Hand In Date Change Over Budget Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <default>true</default>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_NoOfKeysReceivedByNewManager__c</fullName>
        <label>Transfer - No of Keys received</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_User_Email_Encrypted__c</fullName>
        <inlineHelpText>This is an encrypted field. Add the driver details here. This field is not visible to all users.</inlineHelpText>
        <label>Vehicle User Email</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_ActualAddToFleetFinancialYear__c</fullName>
        <label>Actual Add To Fleet Financial Year</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_RegistrationDocumentsUploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration Documents Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_ReplacementVehicleDescription__c</fullName>
        <label>Replacement Vehicle Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_ApprovedNewRequestedHandInDate__c</fullName>
        <description>This value is used to copy to expected hand in date formula field once New requested hand in date is approved.It will populate its value from New requested hand in date on approval.</description>
        <label>Approved New Requested Hand In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_NewRequestedHandedInDateStatus__c</fullName>
        <label>New Requested Hand In Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_Available_for_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehicle Available for Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_ActualToDateForExtendedHandedIn__c</fullName>
        <label>Actual To Date For Extended Hand In</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_NewRequestedHandedInDateQuarter__c</fullName>
        <label>New Requested Hand In Date Quarter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_NoOfKeysTransferredToNewManager__c</fullName>
        <label>Transfer - No of Keys Transferred</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                    <default>true</default>
                    <label>2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Age_Post_Actual_Add_to_Fleet_Date__c</fullName>
        <description>Calculates the age of the vehicle based on the Actual Add to Fleet Date up until the vehicle is handed in</description>
        <formula>IF( TEXT(OUV_VehicleMasterStatus__c)=&apos;Live&apos; || TEXT(OUV_VehicleMasterStatus__c)=&apos;Pre-Live&apos; , Today() -  OUV_AddToFleetDate__c , IF( TEXT(OUV_VehicleMasterStatus__c)=&apos;Handed In&apos; || TEXT(OUV_VehicleMasterStatus__c)=&apos;Unavailable&apos;, OUV_ActualHandInDate__c - OUV_AddToFleetDate__c ,null))</formula>
        <label>Age Post Actual Add to Fleet Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_NewRequestedHandedInFinancialYear__c</fullName>
        <label>New Requested Hand In Financial Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <sharingReasons>
        <fullName>OUV_Fleet_Members__c</fullName>
        <label>Fleet Members</label>
    </sharingReasons>
    <validationRules>
        <fullName>Check_Full_VIN</fullName>
        <active>true</active>
        <description>Before turning Vehicle Live, the system should validate whether FULL VIN is populated in OUV Vehicle</description>
        <errorConditionFormula>AND(NOT( ISCHANGED( OUV_ByPassValidation__c ) ),ISCHANGED(OUV_VehicleMasterStatus__c),(LEN (OUV_FullVIN__c) = 0), (TEXT(OUV_VehicleMasterStatus__c) = &apos;Live&apos;))</errorConditionFormula>
        <errorMessage>Before turning Vehicle Status to Live, the Full VIN field must be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Vehicle_PreSold</fullName>
        <active>true</active>
        <description>Expected Hand in Date cannot be changed when Vehicle Pre sold is checked</description>
        <errorConditionFormula>IF( AND(NOT( ISCHANGED( OUV_ByPassValidation__c ) ),OUV_Presold__c   = True),IF( ISCHANGED(  OUV_NewRequestedHandedInDate__c ) , True, false) , false)</errorConditionFormula>
        <errorDisplayField>OUV_NewRequestedHandedInDate__c</errorDisplayField>
        <errorMessage>This field cannot be modified because the Vehicle Pre-sold is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Live_Status_Change</fullName>
        <active>true</active>
        <errorConditionFormula>( $UserRole.DeveloperName &lt;&gt; &apos;Global_OUV_Office&apos; &amp;&amp;
NOT( ISCHANGED( OUV_ByPassValidation__c )) &amp;&amp;
ISCHANGED( OUV_VehicleMasterStatus__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(OUV_VehicleMasterStatus__c ),&apos;Live&apos;) ) 
&amp;&amp;
( TEXT(OUV_VehicleMasterStatus__c) = &apos;Pre-Live&apos; ||
( TEXT(OUV_VehicleMasterStatus__c) = &apos;Unavailable&apos; &amp;&amp; TEXT(OUV_VehicleSubStatus__c) &lt;&gt; &quot;Write-Off​&quot; ) )</errorConditionFormula>
        <errorDisplayField>OUV_VehicleMasterStatus__c</errorDisplayField>
        <errorMessage>Master Status &quot;Live&quot; can be only changed to &quot;Handed In&quot; or &quot;Disposed&quot; with sub status &quot;Write-Off&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Sub_Status_Required</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(OUV_VehicleSubStatus__c)= &apos;&apos; &amp;&amp;   $Profile.Name  &lt;&gt;  &apos;System Administrator&apos;</errorConditionFormula>
        <errorDisplayField>OUV_VehicleSubStatus__c</errorDisplayField>
        <errorMessage>Sub-Status is a required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Vehicle_Sales_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( ISCHANGED( OUV_ByPassValidation__c ) ),OR 
( 
AND 
( 
ISPICKVAL( OUV_VehicleMasterStatus__c , &quot;Unavailable&quot; ) , 
ISPICKVAL( OUV_VehicleSubStatus__c , &quot;Sold&quot;) , 
ISBLANK(TEXT(OUV_SoldTo__c)) 
), 
AND 
( 
ISPICKVAL( OUV_VehicleMasterStatus__c , &quot;Unavailable&quot; ) , 
ISPICKVAL( OUV_VehicleSubStatus__c , &quot;Sold&quot;) , 
ISNULL( OUV_FinalSalesPrice__c) 
), 
AND 
( 
ISPICKVAL( OUV_VehicleMasterStatus__c , &quot;Unavailable&quot; ) , 
ISPICKVAL( OUV_VehicleSubStatus__c , &quot;Sold&quot;) , 
ISNULL( OUV_SalePriceDate__c) 
) 
)
)</errorConditionFormula>
        <errorMessage>Please fill following fields:                                           
1. Sales Channel                                            
2. Sales Price     
3. Date of Sale</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_BasicUser_MasterStatus</fullName>
        <active>true</active>
        <description>Restrict Basic User from changing OUV Vehicle Master status from Handed in to Live.</description>
        <errorConditionFormula>AND(
$UserRole.DeveloperName &lt;&gt; &apos;Global_OUV_Office&apos;,
$Profile.Name =&apos;OUV Basic User Platform&apos;,
ISCHANGED(OUV_VehicleMasterStatus__c),
ISPICKVAL(PRIORVALUE(OUV_VehicleMasterStatus__c),&apos;Handed In&apos;),
ISPICKVAL(OUV_VehicleMasterStatus__c , &apos;Live&apos;) 
)</errorConditionFormula>
        <errorMessage>Insufficient permissions to change Master Status from &apos;Handed in&apos; to &apos;Live&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Check_Primary_Location</fullName>
        <active>true</active>
        <description>Before turning the vehicle Live, the Primary Location must be populated.</description>
        <errorConditionFormula>AND(NOT( ISCHANGED( OUV_ByPassValidation__c ) ),ISCHANGED(OUV_VehicleMasterStatus__c),OUV_PrimaryLocation__c = &apos;&apos;, (TEXT(OUV_VehicleMasterStatus__c) = &apos;Live&apos;))</errorConditionFormula>
        <errorDisplayField>OUV_PrimaryLocation__c</errorDisplayField>
        <errorMessage>Before turning Vehicle Status to Live, the Primary Location field must be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Pre_Live_Status_Change</fullName>
        <active>true</active>
        <errorConditionFormula>( $UserRole.DeveloperName &lt;&gt; &apos;Global_OUV_Office&apos; &amp;&amp;
NOT( ISCHANGED( OUV_ByPassValidation__c )) &amp;&amp;
ISCHANGED( OUV_VehicleMasterStatus__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(OUV_VehicleMasterStatus__c ),&apos;Pre-Live&apos;) ) 
&amp;&amp;
( TEXT(OUV_VehicleMasterStatus__c)  = &apos;Handed In&apos; ||
( TEXT(OUV_VehicleMasterStatus__c) = &apos;Unavailable&apos; &amp;&amp; (TEXT(OUV_VehicleSubStatus__c) &lt;&gt; &apos;Return to Stock&apos; &amp;&amp; TEXT(OUV_VehicleSubStatus__c) &lt;&gt; &apos;In FMS&apos;))
)</errorConditionFormula>
        <errorDisplayField>OUV_VehicleMasterStatus__c</errorDisplayField>
        <errorMessage>Master status &quot;Pre-Live&quot; can be changed only to &quot;Live&quot; or &quot;Disposed&quot; with sub status &quot;Return to Stock&quot; or &quot;In FMS&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Handed_In_Status_Change</fullName>
        <active>true</active>
        <errorConditionFormula>$UserRole.DeveloperName &lt;&gt; &apos;Global_OUV_Office&apos; &amp;&amp;
NOT( ISCHANGED( OUV_ByPassValidation__c )) &amp;&amp;
ISCHANGED( OUV_VehicleMasterStatus__c ) &amp;&amp; 
ISPICKVAL(PRIORVALUE(OUV_VehicleMasterStatus__c ),&apos;Handed In&apos;) &amp;&amp; 
TEXT(OUV_VehicleMasterStatus__c) &lt;&gt; &apos;Live&apos; &amp;&amp; 
TEXT(OUV_VehicleMasterStatus__c) &lt;&gt; &apos;Unavailable&apos;</errorConditionFormula>
        <errorDisplayField>OUV_VehicleMasterStatus__c</errorDisplayField>
        <errorMessage>Master status &quot;Handed in&quot; can only be changed to &quot;Live&quot; or &quot;Disposed&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Vehicle_Remarketing_Edit</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
NOT( ISCHANGED( OUV_ByPassValidation__c ) ),
Text(OUV_ATORequestFleet__c)&lt;&gt; &quot;Remarketing Fleet&quot;, 
$Permission.OUV_Remarketing_Vehicle_Edit, 
$User.Id &lt;&gt; Owner:User.Id, 
OR( 
ISCHANGED(OUV_SoldTo__c), 
ISCHANGED(Name), 
ISCHANGED(OUV_VistaVehicle__c), 
ISCHANGED(OUV_HandinDate__c), 
ISCHANGED(OUV_OrderNumber__c), 
ISCHANGED(OUV_ProposedAddToFleetDate__c), 
ISCHANGED(OUV_Justification__c), 
ISCHANGED(OUV_VehicleMasterStatus__c), 
ISCHANGED(OUV_VehicleSubStatus__c), 
ISCHANGED(OUV_DeliveryDate__c), 
ISCHANGED(OUV_AddToFleetDate__c), 
ISCHANGED(OUV_BuildPhase__c), 
ISCHANGED(OUV_ReportingCategory__c), 
ISCHANGED(OUV_ReportingLevel1__c), 
ISCHANGED(OUV_ReportingLevel2__c), 
ISCHANGED(OUV_ReportingLevel3__c), 
ISCHANGED(OUV_ATORequestFleet__c), 
ISCHANGED(OUV_CostCentre__c), 
ISCHANGED(OUV_ATORequestType__c), 
ISCHANGED(OUV_Driver__c), 
ISCHANGED(OUV_RegistrationRequired__c), 
ISCHANGED(OUV_Registration__c), 
ISCHANGED(OUV_DeRegistrationDate__c), 
ISCHANGED(OUV_RoadTaxValidFrom__c), 
ISCHANGED(OUV_InsuranceValidFrom__c), 
ISCHANGED(OUV_Insurance__c), 
ISCHANGED(OUV_NextMOTRequired__c), 
ISCHANGED(OUV_PIINoticePlaced__c), 
ISCHANGED(OUV_PrimaryLocation__c), 
ISCHANGED(OUV_VehicleStatus__c), 
ISCHANGED(OUV_RegistrationDocumentsUploaded__c), 
ISCHANGED(OUV_DeRegistrationDate__c), 
ISCHANGED(OUV_RoadTaxValidTo__c), 
ISCHANGED(OUV_InsuranceValidTo__c), 
ISCHANGED(OUV_InsuranceDocumentsUploaded__c), 
ISCHANGED(OUV_ReplacementVehicleMileage__c), 
ISCHANGED(OUV_IdentitySticker__c), 
ISCHANGED(OUV_StatusCode__c), 
ISCHANGED(OUV_CarKeysDeliveredToManager__c), 
ISCHANGED(OUV_CarKeysReceivedByManager__c), 
ISCHANGED(OUV_NoOfKeysTransferredToNewManager__c), 
ISCHANGED(OUV_KeysTransfferedToNewManager__c), 
ISCHANGED(OUV_NoOfKeysReceivedByNewManager__c), 
ISCHANGED(OUV_KeysRecievedByNewManager__c), 
ISCHANGED(OUV_DisposalRoute__c), 
ISCHANGED(OUV_UpdatedDisposalRoute__c), 
ISCHANGED(OUV_WriteOff__c), 
ISCHANGED(OUV_CarCondition__c), 
ISCHANGED(OUV_CustomerIdentifier__c), 
ISCHANGED(OUV_FinalSalesPrice__c), 
ISCHANGED(OUV_SalePriceDate__c), 
ISCHANGED(OUV_FinanceClassification__c), 
ISCHANGED(OUV_InitialRetailPrice__c), 
ISCHANGED(OUV_InventoryStatus__c), 
ISCHANGED(OUV_RetailPrice__c), 
ISCHANGED(OUV_MaterialCosts__c), 
ISCHANGED(CurrencyIsoCode), 
ISCHANGED(OUV_Freight__c), 
ISCHANGED(OUV_ResidualValuePercent__c), 
ISCHANGED(OUV_InventoryValue__c), 
ISCHANGED(OUV_TransferPrice__c), 
ISCHANGED(OUV_ATONumber__c), 
ISCHANGED(OUV_ATOLineItemName__c), 
ISCHANGED(OUV_ATOJustification__c), 
ISCHANGED(OUV_ReworkRoute__c), 
ISCHANGED(OUV_TargetUtilisationPercentage__c), 
ISCHANGED(OUV_IsReplacementVehicle__c), 
ISCHANGED(OUV_ReplacementVehicleVINNumber__c), 
ISCHANGED(OUV_ReplacementVehicleDescription__c), 
ISCHANGED(OUV_ReplacementVehicleMileage__c), 
ISCHANGED(OUV_ShortDescription__c) 
) 
)</errorConditionFormula>
        <errorMessage>User has no access right to edit the record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Vehicle_Transfer_Manager</fullName>
        <active>true</active>
        <description>When user changes the owner of OUV vehicle check if  No of Keys Transferred to New Manager pick list and Keys Transferred to New Manager checkbox should be populated</description>
        <errorConditionFormula>AND 
( NOT( ISCHANGED( OUV_ByPassValidation__c ) ),
OR( 
ISCHANGED( OwnerId ) , 
AND( 
ISCHANGED(OUV_VehicleMasterStatus__c), 
ISPICKVAL(OUV_VehicleMasterStatus__c, &quot;Handed In&quot;)) 
), 
OUV_KeysTransfferedToNewManager__c = false , 
OR 
( 
NOT(ISPICKVAL(OUV_NoOfKeysTransferredToNewManager__c, &quot;0&quot; )), 
NOT(ISPICKVAL(OUV_NoOfKeysTransferredToNewManager__c, &quot;1&quot;)), 
NOT(ISPICKVAL(OUV_NoOfKeysTransferredToNewManager__c, &quot;2&quot;)) 
) 
)</errorConditionFormula>
        <errorMessage>Please ensure the fields &quot;Transfer - No of Keys Transferred&quot; &amp; &quot;Transfer - Keys transferred&quot; are completed before transferring the vehicle to New Manager</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Unavailable_Status_Change</fullName>
        <active>true</active>
        <errorConditionFormula>$UserRole.DeveloperName &lt;&gt; &apos;Global_OUV_Office&apos; &amp;&amp; 
NOT( ISCHANGED( OUV_ByPassValidation__c )) &amp;&amp;
ISCHANGED( OUV_VehicleMasterStatus__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(OUV_VehicleMasterStatus__c ),&apos;Unavailable&apos;)</errorConditionFormula>
        <errorDisplayField>OUV_VehicleMasterStatus__c</errorDisplayField>
        <errorMessage>Master Status can not be changed for &quot;Disposed&quot; vehicles</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Vehicle_Road_Tax_Validity</fullName>
        <active>true</active>
        <description>Road Tax From Date should be less that Road Tax To Date</description>
        <errorConditionFormula>AND(NOT( ISCHANGED( OUV_ByPassValidation__c ) ),OUV_RoadTaxValidFrom__c &gt; OUV_RoadTaxValidTo__c)</errorConditionFormula>
        <errorDisplayField>OUV_RoadTaxValidFrom__c</errorDisplayField>
        <errorMessage>From Date cannot be greater than To Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Vehicle_Insurance_Validity</fullName>
        <active>true</active>
        <description>From date cannot be greater than To date</description>
        <errorConditionFormula>AND(NOT( ISCHANGED( OUV_ByPassValidation__c ) ),OUV_InsuranceValidFrom__c &gt; OUV_InsuranceValidTo__c)</errorConditionFormula>
        <errorDisplayField>OUV_InsuranceValidTo__c</errorDisplayField>
        <errorMessage>From date cannot be greater than To date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reporting_Level_must_Match_Fleet</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT( ISCHANGED( OUV_ByPassValidation__c ) ),
  NOT(ISNULL(OUV_Fleet__c)),
  TEXT( OUV_ReportingLevel1__c ) !=    TEXT(OUV_Fleet__r.OUV_Reporting_Category_1__c) 
)</errorConditionFormula>
        <errorDisplayField>OUV_ReportingLevel1__c</errorDisplayField>
        <errorMessage>The reporting level 1 must match the reporting level defined on the selected Fleet.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Vehicle_New_Requested_Hand_In_Date</fullName>
        <active>false</active>
        <description>New requested handed in date (Extended handed in date) should always be greater than Expected handed in</description>
        <errorConditionFormula>IF(AND(NOT( ISCHANGED( OUV_ByPassValidation__c ) ),( NOT(ISBLANK(OUV_NewRequestedHandedInDate__c)) &amp;&amp; (OUV_NewRequestedHandedInDate__c &lt; OUV_HandinDate__c ))),true,false)</errorConditionFormula>
        <errorDisplayField>OUV_NewRequestedHandedInDate__c</errorDisplayField>
        <errorMessage>New Requested Handed In Date should be greater than Expected Handed In</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Vehicle_Required_Justification_Field</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( ISCHANGED( OUV_ByPassValidation__c ) ),
OR 
	( 
		AND 
		( 
			ISPICKVAL( OUV_VehicleMasterStatus__c , &quot;Unavailable&quot; ) , 
			ISPICKVAL( OUV_VehicleSubStatus__c , &quot;Write-Off​&quot;),
			ISCHANGED(OUV_VehicleMasterStatus__c),
			ISCHANGED(OUV_VehicleSubStatus__c),
			ISBLANK(OUV_Justification__c)

		),
		AND
		(
			ISPICKVAL( OUV_UpdatedDisposalRoute__c , &quot;Scrap&quot; ) ,
			ISCHANGED(OUV_UpdatedDisposalRoute__c),
			ISBLANK(OUV_Justification__c)
		), 
		AND
		( 
			ISPICKVAL( OUV_NewRequestedHandedInDateStatus__c , &quot;New&quot; ) , 
			NOT(ISBLANK(OUV_NewRequestedHandedInDate__c)),
			ISBLANK(OUV_Justification__c)
		)
	))</errorConditionFormula>
        <errorDisplayField>OUV_Justification__c</errorDisplayField>
        <errorMessage>Please add a justification to complete this update.</errorMessage>
    </validationRules>
</CustomObject>